--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -18,6 +18,9 @@ dependencies {
     compile "ch.qos.logback:logback-classic:$logbackVersion"
     compile "io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry"
 
+    compile("org.springframework.boot:spring-boot-starter-actuator:$springBootVersion")
+
+
     testCompile project(":components:test-support")
 
 
