Circuit Breaker changes

--- a/manifest-allocations.yml
+++ b/manifest-allocations.yml
@@ -12,3 +12,5 @@ applications:
   services:
   - tracker-allocations-database
   - tracker-service-registry
+  - tracker-circuit-breaker-dashboard
+
